--- a/Spati-demo.Rmd
+++ b/Spati-demo.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "Stan demo with Spati data"
 output:
-  pdf_document: default
   html_document:
     df_print: paged
+  pdf_document: default
 ---
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
@@ -17,9 +17,11 @@ if (!require(bayesplot)) install.packages("bayesplot")
 ```
 
 
-In this notebook, we compare estimating linear mixed-effect models with NLME and Stan. The dataset comes from package "lmfor" and the example is the same that is used in mixed-effect model courses. 
+In this notebook, we are comparing the estimation of linear mixed-effect models with NLME and Stan. The dataset comes from package "lmfor" and the example is the same that is used in mixed-effect model courses. 
 
 ## Preparing the data
+
+The data contains tree measurements.
 
 ```{r}
 library(lmfor)
@@ -45,7 +47,7 @@ summary(spati_lme)
 
 Bayesian Regression Models with Stan (BRMS) uses Stan underneath, but offers lme4-like syntax for specifying the model
 
-```{r}
+```{r, echo=TRUE, message=FALSE, warning=FALSE}
 library(rstan)
 library(brms)
 
@@ -70,7 +72,7 @@ if (file.exists(modelfile))
 spati_brm  
 ```
 
-In comparison to the LME estimation, all the parameters have now posterior densities instead of point estimates. The BRM estimatation (0.81) of id2 coefficient matches the LME estimation, but now we can inspect its accuracy from the posterior. 
+In comparison to the LME estimation, all the parameters have now posterior densities instead of point estimates. The BRM estimation (0.81) of id2 coefficient matches the LME estimation, but now we can inspect its accuracy from the posterior. 
 
 ```{r}
 plot(spati_brm, pars=c("b_id2"))
@@ -93,7 +95,7 @@ BRMS generates Stan-code for the spesified regression model, and the generated c
 
 Next, we create the same linear mixed-effect model with hand crafted Stan-code where you can tweak all the parts of the model. The model itself is defined in a separate "spati.stan" files and here we only pass the data to it. 
 
-```{r}
+```{r, echo=TRUE, message=FALSE, warning=FALSE}
 library(rstan)
 
 # Parameters are feeded to Stan model as a list of values
@@ -150,7 +152,7 @@ plot(ppc_dens_overlay(params$Y, posterior_y_50) +
 
 Instead of HMC sampling, Stan allows you to estimate the model also with variational bayes ADVI-algorithm that is significantly faster (but approximate)
 
-```{r}
+```{r, echo=TRUE, message=FALSE, warning=FALSE}
 library(rstan)
 
 spati_model <- stan_model(file = "spati.stan")
